# aiopnsense

./: .github_changelog_generator  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  README.md  data.json  prek.toml  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
.github/workflows/: changelog.yml  docs.yml  labeler.yml  linters.yml  lock_closed_issues.yml  prek_autoupdate.yml  pytest_coverage.yml  release.yml
aiopnsense/: __init__.py  _typing.py  client.py  client_base.py  client_endpoint.py  client_queue.py  client_transport.py  const.py  dhcp.py  exceptions.py  firewall.py  firmware.py  helpers.py  nut.py  services.py  smart.py  speedtest.py  system.py  telemetry.py  traffic.py  unbound.py  vnstat.py  vouchers.py  vpn.py
docs/source/: authentication.rst  changelog.md  changelog.rst  conf.py  development.rst  examples.rst  external.rst  index.rst  installation.rst  quickstart.rst  requirements.rst  scripts.rst
docs/source/_ext/: opnsense_client_api.py
docs/source/api/: client.rst  dhcp.rst  exceptions.rst  firewall.rst  firmware.rst  index.rst  nut.rst  services.rst  smart.rst  speedtest.rst  system.rst  telemetry.rst  traffic.rst  unbound.rst  vnstat.rst  vouchers.rst  vpn.rst
docs/superpowers/plans/: 2026-06-30-live-opnsense-test-scripts.md  2026-07-12-optional-device-id-validation.md
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_d74336722521b1a0___init___py.html  z_d74336722521b1a0__typing_py.html  z_d74336722521b1a0_client_base_py.html  z_d74336722521b1a0_client_endpoint_py.html  z_d74336722521b1a0_client_py.html  z_d74336722521b1a0_client_queue_py.html  z_d74336722521b1a0_client_transport_py.html  z_d74336722521b1a0_const_py.html  z_d74336722521b1a0_dhcp_py.html  z_d74336722521b1a0_exceptions_py.html  z_d74336722521b1a0_firewall_py.html  z_d74336722521b1a0_firmware_py.html  z_d74336722521b1a0_helpers_py.html  z_d74336722521b1a0_nut_py.html  z_d74336722521b1a0_services_py.html  z_d74336722521b1a0_smart_py.html  z_d74336722521b1a0_speedtest_py.html  z_d74336722521b1a0_system_py.html  z_d74336722521b1a0_telemetry_py.html  z_d74336722521b1a0_traffic_py.html  z_d74336722521b1a0_unbound_py.html  z_d74336722521b1a0_vnstat_py.html  z_d74336722521b1a0_vouchers_py.html  z_d74336722521b1a0_vpn_py.html
scripts/: _opnsense_live_common.py  aiopnsense.env.example  aiopnsense_dump.py  opnsense_api_call.py
tests/: __init__.py  conftest.py  test_category_result.py  test_client_base.py  test_client_endpoint.py  test_client_queue.py  test_client_transport.py  test_dhcp.py  test_dhcp_optional_results.py  test_docs_conf.py  test_exceptions.py  test_firewall.py  test_firmware.py  test_helpers.py  test_nut.py  test_scripts_aiopnsense_dump.py  test_scripts_live_common.py  test_scripts_opnsense_api_call.py  test_services.py  test_smart.py  test_speedtest.py  test_system.py  test_telemetry.py  test_traffic.py  test_unbound.py  test_vnstat.py  test_vouchers.py  test_vpn.py
